# binomial

./: CMakeLists.txt  FindCppUnit.cmake  README.md  main.cpp
include/: binomial.h  binomial1.h  binomial_factorization.h  binomial_factorization1.h  binomials.h  cached_primes.h  factorization.h  paccumulate.h  thread_pool.h  utils.h
src/: cached_primes.cpp  main.cpp  thread_pool.cpp
test/: Binomial1Test.cpp  BinomialTest.cpp  ThreadPoolTest.cpp  main_test.cpp
